--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <fieldset>
         <legend class="push-1-2 mega">Personal details</legend>
         <div class="grid">
-          <div class="unit xs-1 s-1 m-1 l-1-2 push">
+          <div class="name unit xs-1 s-1 m-1 l-1-2 push">
             <label for="name">Name</label>
             <input id="name" name="name">
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1-2 push">
+          <div class="age unit xs-1 s-1 m-1 l-1-2 push">
             <label for="age">Age</label>
             <input id="age" name="age">
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1-2 push">
+          <div class="email unit xs-1 s-1 m-1 l-1-2 push">
             <label for="email">Email</label>
             <input id="email" type="email" name="email">
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1-2 push">
+          <div class="health unit xs-1 s-1 m-1 l-1-2 push">
             <label for="health">Physical fitness</label>
             <select id="health" name="health">
               <option>Super-human</option>
@@ -52,7 +52,7 @@
             <label for="details">Why do you want to go to Mars?</label>
             <textarea id="details-2" name="message"></textarea>
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1">
+          <div class="unit xs-1 s-1 m-1 l-1 text-center">
             <button class="btn" type="submit">Register for the trip!</button>
           </div>
           <input type="hidden" name="_subject" value="Request to join the mission">
